# dVulnDB

./: .gitignore  .yarnrc.yml  Anchor.toml  DEPLOYMENT.md  Dockerfile  README.md  SOLANA_KEYPAIR_SETUP.md  WARP.md  deploy-devnet.json  deploy-mainnet.json  deploy-testnet.json  docker-compose.yml  hardhat.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vercel.json
.cargo/: config.toml
.github/workflows/: ci.yml
.kiro/settings/: mcp.json
.kiro/steering/: 01-project-overview.md  02-tech-stack-architecture.md  03-code-style-patterns.md  04-web3-blockchain-guidelines.md  (+6 more)
Backups/: Header_OLD.tsx  MockWalletButton.tsx  MockWalletProvider.tsx  WalletProviderWrapper.tsx  globals.css  globals.upgrade.css
anchor/: .mocharc.json  Cargo.toml  tsconfig.json
anchor/programs/bounty_escrow/: Cargo.toml  rust-toolchain.toml
anchor/programs/bounty_escrow/src/: lib.rs
anchor/programs/reputation_nft/: Cargo.toml
anchor/programs/reputation_nft/src/: lib.rs
cache/: solidity-files-cache.json
contracts/: IBountyEscrow.sol  VulnerabilityRegistry.sol
docs/: dvulndb-documentation.md
evm/: hardhat.config.ts
gen_app/: app.js  index.html  style.css
lib/: appkit.ts  network-config.ts
plans/: 2025-06-17_progress_summary.md
scripts/: build-check.js  build-ubuntu.sh  fix-rust-targets.sh  fix-solana-toolchain.sh  fix-version-conflict.sh  force-update-anchor.sh  setup-anchor-avm.sh  start-validator.ps1  stop-validator.ps1  update-anchor-deps.sh  upgrade-anchor.sh  verify-deployment.js  verify-keypair.js
(+107 files in other folders)
