[package]
name = "bounty_escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
# Uncomment the next line if you use anchor-spl
# anchor-spl = { workspace = true }

[dev-dependencies]
# Add any dev dependencies here
